7169050: (se) Selector.select slow on Solaris due to insertion of POLLREMOVE and 0 events

Reviewed-by: chegar, coffeys